NFDIV-3788 added certificate of entitlement to the test output cos I am thinking this should be in there and changed the code so there is removal of the old one then generation (but not then another remove at the end),